# PBR-Renderer

./: CMakeLists.txt  README.md
.cache/clangd/index/: Arena.c.D880A2FF6159BCAC.idx  Arena.h.A33FC05C62B16974.idx  Camera.c.9E2369E814EAEE36.idx  Camera.h.C08F5BE24BFD9848.idx  Camera.h.F5BAB050844DD5C9.idx  Chunks.h.054EE6BD4228354E.idx  FastNoiseLite.h.4AEE7AC2563BDFF1.idx  FastNoiseLite.h.674A2746F98CBFD9.idx  Global.h.E3475573F3CEC536.idx  Math.h.57F3E291A3AF9E2F.idx  MathUtil.c.A8972B51E5A3795A.idx  MathUtil.h.307B42F7F764A013.idx  Vector.h.EF6600C908B9A785.idx  Window.c.5FAA91BA74BBAA64.idx  Window.h.0536BD2267F6C9E2.idx  aabb2d.c.4543DE1B5C903AA5.idx  aabb2d.c.69578871F2C1222A.idx  aabb2d.h.80B1BCB76A9C3109.idx  aabb2d.h.82EAD41AD32D3FAB.idx  aabb2d.h.F4CB1C78D8084EFC.idx  aabb2d.h.F7C919B680242F83.idx  affine-mat.h.789BFA55F7DAB946.idx  affine-mat.h.E163B2FDFAFCF71F.idx  affine-post.h.3837EC2A3F7E265F.idx  affine-post.h.4F67ADC2DF46F8CD.idx  affine-pre.h.BB8489A4C3306B26.idx  affine-pre.h.DE8D2472D4516CDD.idx  affine.c.021FD3E84E441D4A.idx  affine.c.77ED79814F066624.idx  affine.h.002EF89625911F90.idx  (+388 more)
include/: Chunks.h  Global.h
include/core/: Arena.h  Camera.h  MathUtil.h  Texture.h  Vector.h  Window.h
shaders/: background_fs.glsl  background_vs.glsl  brdf_fs.glsl  brdf_vs.glsl  cubemap_vs.glsl  default_fs.glsl  default_vs.glsl  eqrec_to_cubemap_fs.glsl  irradiance_convolution_fs.glsl  prefilter_fs.glsl  quad_fs.glsl  quad_vs.glsl  shadow_map_fs.glsl  shadow_map_vs.glsl
src/: main.c
src/core/: Arena.c  Camera.c  MathUtil.c  Window.c
